# callisto.framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  conanUpdate.bash  conanUpdate.bat  conanUpdate64.bat  conan_update_x64.bat  conan_update_x64.sh  conanfile.py  conanfile.txt
callisto.framework/: CMakeLists.txt
callisto.framework/include/Callisto/Framework/Auxiliary/: Enums.hpp
callisto.framework/include/Callisto/Framework/Exception/: DetailException.hpp  HoldStringException.hpp
callisto.framework/include/Callisto/Framework/Native/: LibExport.h
callisto.framework/include/Callisto/Framework/Native/API/: API_Data.h  API_String.hpp
callisto.framework/include/Callisto/Framework/Templates/: RingDeque.hpp
callisto.framework/include/callisto/framework/: type_traits.hpp
callisto.framework/include/callisto/framework/auxiliary/: enums.hpp
callisto.framework/include/callisto/framework/entry_main/: wchar_arguments.hpp
callisto.framework/include/callisto/framework/exception/: detail_exception.hpp  hold_string_exception.hpp  string_holder_exception.hpp
callisto.framework/include/callisto/framework/ios/: enum_streamer.hpp
callisto.framework/include/callisto/framework/native/: lib_export.h  platform_detect.h  platform_macros.h  types.h
callisto.framework/include/callisto/framework/native/api/: api_data.h  api_string.hpp
callisto.framework/include/callisto/framework/templates/: handlers.hpp  mutable_array.hpp  signal.hpp  unique_handler.hpp
callisto.framework/include/callisto/framework/templates/handlers/: default_disposer.hpp  shared_handler.hpp  unique_handler.hpp
callisto.framework/src/Exception/: DetailException.cpp  HoldStringException.cpp
callisto.framework/src/Native/API/Auxiliary/: API_String.cpp
callisto.framework/src/callisto/framework/native/: numeric_type.cpp
callisto.framework/src/exception/: detail_exception.cpp  hold_string_exception.cpp
callisto.framework/src/native/api/: api_string.cpp
include/Callisto/Exception/: HoldStringException.hpp
include/Callisto/Framework/Auxiliary/: Enums.hpp
include/Callisto/Framework/Exception/: HoldStringException.hpp
include/Callisto/Framework/Native/: Types.h
include/Callisto/Framework/Native/API/Auxiliary/: API_String.hpp
include/Callisto/Framework/Native/API/Data/: API_Data.h
include/Callisto/Framework/Templates/: ConcurrentBuffer.hpp  RingDeque.hpp
include/Callisto/Native/: LibExport.h  Types.h
include/Callisto/Native/API/Auxiliary/: API_String.hpp
include/Callisto/Native/API/Data/: API_Data.h
include/Exception/: HoldStringException.hpp  RuntimeException.cpp  RuntimeException.hpp
include/Macros/: Detect.hpp  LibExport.hpp  Types.hpp
include/Native/: LibExport.h  MacroDetect.h  Types.h
include/Native/API/Data/: API_String.h
include/Templates/: ConcurrentBuffer.hpp  RingDeque.hpp
include/callisto/framework/: exception.hpp  type_traits.hpp
include/callisto/framework/exception/: exception.hpp  string_builder_exception.hpp  string_holder_exception.hpp
include/callisto/framework/native/: lib_export.h  numeric_type.hpp  platform_detect.h
include/callisto/framework/templates/handlers/: default_disposer.hpp  shared_handler.hpp  unique_handler.hpp
manuals/callisto.framework.show/: CMakeLists.txt
manuals/callisto.framework.show/src/: main.cpp
manuals/callisto.framework.show/src/shows/: show_handlers.cpp
runtime/executable/: callisto_framework_show
src/Exception/: HoldStringException.cpp
src/Native/API/Auxiliary/: API_String.cpp
src/callisto/framework/exception/: exception.cpp
src/callisto/framework/native/: numeric_type.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp  test_1.cpp
test_package/src/exception/: exception_test.cpp
test_package/src/templates/: signal_test.cpp
tests/manual/callisto.framework.show/src/: visual_test.cpp
tests/manual/callisto.framework.show/src/shows/: show_declarations.hpp  show_exception.cpp  show_handlers.cpp  show_platform_detect.cpp
tests/visual/callisto.framework.visual/: CMakeLists.txt
tests/visual/callisto.framework.visual/src/: visualTest.cpp  visual_test.cpp
tests/visual/callisto.framework.visual/src/Tests/: TestExceptions.cpp  TestExceptions.hpp  TestMacroDetect.cpp  TestMacroDetect.hpp
tests/visual/callisto.framework.visual/src/shows/: show_declarations.hpp  show_exception.cpp  show_handlers.cpp  show_platform_macros.cpp  show_unique_handler.cpp
visual_test/: CMakeLists.txt  visualTest.cpp
visual_test/Tests/: TestConcurrentBuffer.cpp  TestConcurrentBuffer.hpp  TestExceptions.hpp  TestMacroDetect.cpp
visual_test/src/Tests/: TestExceptions.cpp  TestExceptions.hpp  TestMacroDetect.cpp
